change from 6001 to 5002

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,7 +8,7 @@
   },
   "Services": {
     "weathers": {
-      "DownstreamPath": "https://localhost:6001"
+      "DownstreamPath": "http://localhost:5002"
     }
   },
   "ApiGwPath": "/apigw"
