change from 6001 to 5002

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "Services": {
     "weathers": {
-      "DownstreamPath": "https://localhost:6001"
+      "DownstreamPath": "http://localhost:5002"
     }
   },
   "ApiGwPath": "/apigw"
