--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "dotnetRunMessages": "true",
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7001;http://localhost:7000",
+      "applicationUrl": "https://localhost:5003;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
