add dummy doamin

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "Services": {
     "weathers": {
-      "DownstreamPath": "http://localhost:5002"
+      "DownstreamPath": "http://example.com:5002"
     }
   },
   "ApiGwPath": "/apigw"
